--- a/assets/style.css
+++ b/assets/style.css
@@ -3,19 +3,18 @@ body{
     margin: 0;
     background-color: rgb(203, 191, 215);
     
+    
 }
 h1{
     
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 6%; 
-    font-size: 10vh;
-    width: 80vw;
-    padding: auto;
-    text-align: center;
-    
-    color: rgb(163, 39, 39);
-    font-size:  5vh;
+    margin-bottom: 2vh;
+    margin-top: 0; 
+    font-size: 6.5vh;
+    width: 75vw;    
+    text-align: center;    
+    color: rgb(163, 39, 39);    
     vertical-align: middle;
 }
 
@@ -28,157 +27,113 @@ h1{
         margin-right: 10vh;
     }
 
-.container{
-    display: grid;
+.container{    
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;    
+    flex-direction: column;
+    gap:10px;
     
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 40vh;
+    
+    
+}
+.lien {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;    
+    background-color: rgb(62,62,132);
+    width: 75vw;
+}
+.lien a{
+    text-decoration: none;
+    color: greenyellow;
     margin-left: auto;
     margin-right: auto;
-    grid-template-columns: 1fr ;
-    grid-template-areas: "one " "two" "three" "four" "five" "six";
-    grid-gap: 10px;
-    
-}
-.container div a{
-    color: greenyellow;
-    display: flex;
-    justify-content: center;    
-    background-color: rgb(62, 62, 132);   
-    text-decoration: none;
-    font-size: 400%;
-    text-align: center;
-
-    
-    
-    
-}
-
-.lien:nth-child(1){
-    
-    
-    grid-area:one  ;
+    font-size: 6vh;
 
 }
-.lien:nth-child(2){
-    
-    grid-area:two ;
-}
-.lien:nth-child(3){
-    
-    grid-area:three ;
-}
-.lien:nth-child(4){
-    
-    grid-area:four ;
-}
-.lien:nth-child(5){
-    
-    grid-area: five;
-}
-.lien:nth-child(6){
-    
-    grid-area: six;
-}
+
 .partition img {
     display: block;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
+.retour {
+    font-size: 100px;
+}
+.footer{
+    display: flex;
+    flex-direction: row;
+    padding-left: 1vw;
+}
+.footer a{
+    font-size: 2vw;
+    text-decoration: none;
+    padding-left: 1vw;
+
+}
 
 
-/*@media screen and (max-height: 800px) {
-    .partition img{
-        width: 80%;
-    }
-    .container {
+                /* media query pour tablette */
+ @media screen and (min-height: 1090px)  { 
+    .lien{
         
-         display: block;
-         
-         width: 90%;
-         margin-left: auto;
-         margin-right: auto;
-         
-    }
-    .lienfinal a{
-        font-size: 50px;
-
-    }
-    .container div a{
-        display: block;
-        font-size: 40px;
-    }
-    
-    .lien:nth-child(1){
-        display: block;
-        height: 10%;
-        width: 40%;
-        margin-top: 2%;
-        margin-left: auto;
-        margin-right: auto;
-        
-    }
-    .lien:nth-child(2){
-        display: block;
-        height: 10%;
-        width: 40%;
-        margin-top: 2%;
-        margin-left: auto;
-        margin-right: auto;
-        
-        
-    }
-    .lien:nth-child(3){
-        display: block;
-            height: 10%;
-            width: 40%;
-            margin-top: 2%;
-            margin-left: auto;
-            margin-right: auto;
-        
-
-    }
-    .lien:nth-child(4){
-        display: block;
-            height: 10%;
-            width: 40%;
-            margin-top: 2%;
-            margin-left: auto;            
-            margin-right: auto;
-        
-
-    }
-        .lien:nth-child(5) {
-            display: block;
-            height: 10%;
-            width: 40%;
-            margin-top: 2%;
-            margin-left: auto;
-            margin-right: auto;
-    
-    
-    }
-        .lien:nth-child(6) {
-            display: block;
-            height: 10%;
-            width: 40%;
-            margin-top: 2%;
-            margin-left: auto;
-            margin-right: auto;
-        
-        
-    }
-    .lien div a{
-        display: block;
+        margin-bottom: 10px;
 
     }
     h1{
-        font-size: 400%;
+        font-size: 5.5vh;
     }
-
-}*/
-.retour{
-    font-size: 100px;
+    .lien a{
+        font-size: 5vh;
+    }
+    .container{
+        gap: 0;
+    }
+    
 }
+                /* media query pour tablette orientation paysage */
+@media screen and (max-width: 1285px) and (orientation: landscape)  {
+    .lien a{
+        font-size: 6vh;
+        
+    }
+    h1{
+        font-size: 6.5vh;
+    }
+    .lien{
+        margin-bottom: 10px;
+    }
+    .container{
+        gap: 0;
+    }
+    
+}
+                /* mediaquery smartphone */
+@media screen and (max-width: 420px) and (max-height: 920px){
+    .lien a{
+        font-size: 4vh;
+    }
+    h1{
+        font-size: 4.5vh;
+        width: 100vw;
+    }
+    .lien{
+        width: 100vw;
+    }
+}
+                /* mediaquery smartphone orientation paysage */
+@media screen and (max-width: 920px) and (max-height: 420px){
+    .lien a{
+        font-size: 8vh;
+    }
+    h1{
+        font-size: 10.5vh;
+    }
+}
+
+
+
