--- a/pages/aide/pages/html_css_javascript/assets/style.css
+++ b/pages/aide/pages/html_css_javascript/assets/style.css
@@ -1,54 +1,67 @@
-*{
-    background-color: rgb(203, 191, 215);
-    padding: 5px;
-    margin: 0;
+body{
+    background-color: #fff;
 }
-h1{
-    text-align: center;
-    font-size:4vw ;
-    color: rgb(163, 39, 39);
+#container{
+    display: grid;
+    margin: auto;
+    width: 100vw;
+    height: 100vh;
+    grid-template-columns: 1fr 7fr;
+    grid-template-rows: 1fr 8fr 1fr;
+    gap: 10px;
+
 }
-nav{
-    display: flex;    
-    width: 10vw;
-    height: 80vh;
-    border: 0.5rem solid ;
+.header{
     
-    
-    
-    
+    grid-column: 1/4;
+    justify-content: center;
+
 }
-li{
-    font-size: 1vw;
-    list-style: none;
-    display: flex;
-    flex-direction: column-reverse;
-    text-align: center;
-    width: 8vw;
+.nav{
+   
+    grid-column: 1/2;
     
-    
-    
-    
-    
-    
-}
-li a{
-    text-decoration: none;    
-    color: black;
     
 
+}
+.nav ul{
+    color: black;
+    padding-left: 0%;
     
 }
-.titre{
-    font-size: 2vw;
-    font-weight: 800;
+.nav li{
+    list-style: none;
 }
-.titre2{
-    font-size: 1.25vw;
-    font-weight: 600;
-}
-footer a{
-    font-size: 3vh;
-    margin-left: 1vw;
+.nav li a{
     color: black;
+    text-decoration: none;
+    
+
+}
+.article{
+    
+    grid-column: 2/4;
+    flex-direction: column;
+    
+
+}
+.article h1{
+    text-align: center;
+}
+
+.article img{
+    width: 35%;
+}
+.footer{
+    
+    grid-column: 1/4;
+
+
+}
+
+.flexbox{
+    display: flex;    
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
 }
