--- a/pages/aide/pages/musique/pages/exercices/assets/style.css
+++ b/pages/aide/pages/musique/pages/exercices/assets/style.css
@@ -2,3 +2,25 @@ body{
     margin: 0;
     padding: 0;
 }
+img{
+    display: block;
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+/* smartphone paysage */
+/* tablette portrait*/
+@media screen and (max-width:1100px) {
+    img{
+        width: 90vw;
+    }
+}
+
+/*smartphone portrait*/
+@media screen and (max-width:600px) {
+    p {
+        background-color: red;
+    }
+
+
+}
