--- a/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/assets/style.css
+++ b/pages/aide/pages/musique/pages/solfege/pages/lecture de notes/assets/style.css
@@ -5,6 +5,7 @@ body{
 }
 #conteneur{
     display: grid;
+    display:-ms-grid;
     width: 100vw;
     height: 100vh;
     grid-template-columns: 1fr 4fr 4fr 1fr;
@@ -13,6 +14,7 @@ body{
 }
 #conteneur2{
     display: grid;
+    display: -ms-grid;
     width: 60vw;
    
     grid-template-columns: 1fr 1fr;
@@ -90,7 +92,7 @@ h1{
 }
 .page img{
     display: block;
-    width: 80%;
+    width: 60%;
     margin-top: 2vh;
     margin-left: auto;
     margin-right: auto;
